--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,6 +1,9 @@
 <head>
   <title>{{ page.title }}</title>
-  <link rel="stylesheet" type="text/css" href="/styles/style.css" />
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="author" content="Khallil Mangalji" />
+  <link rel="stylesheet" type="text/css" href="/styles/style.css" />
+  <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <script src="http://code.jquery.com/jquery-latest.js"></script>
+  <script src="/bootstrap/js/bootstrap.min.js"></script>
 </head>
