--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
 <div class="content">
-  <div id="post">
+  <div id="content_post">
     <h1>{{ post.title }}</h1>
     {{ content }}
   </div>
