--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,8 +2,9 @@
   <title>{{ page.title }}</title>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <meta name="author" content="Khallil Mangalji" />
-  <link rel="stylesheet" type="text/css" href="/styles/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+  <link rel="stylesheet" type="text/css" href="/styles/style.css" />
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="/bootstrap/js/bootstrap.min.js"></script>
 </head>
