--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <div class="content">
   <div id="content_post">
-    <h1>{{ post.title }}</h1>
+    <p class="title">{{ post.title }}</p>
     {{ content }}
   </div>
 </div>
