--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,13 +3,18 @@
 <html>
   {% include head.html %}
   <body>
-  <div class="container">
+  <div id="top-bar"></div>
+  <div class="row-fluid">
+
+    <div id="wrap" class="span8">
     <header>
-      <h1 class="title"><a href="/">{{ page.title }}</a></h1>
+    <p class="title">{{ page.title-text }}</p>
     </header>
     <section>
       {{ content }}
     </section>
+    </div>
+
   </div>
   </body>
 </html>
