--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,4 +7,5 @@
   <link rel="stylesheet" type="text/css" href="/styles/style.css" />
   <script src="http://code.jquery.com/jquery-latest.js"></script>
   <script src="/bootstrap/js/bootstrap.min.js"></script>
+  <script src="/script/script.js"></script>
 </head>
