--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -15,9 +15,12 @@
       <div id="wrap">
         <div class="content">
           <div class="row">
-            <div class="span8 inner_content">
-                {{ page.title }}
-                {{ content }}
+            <div class="span10 inner_content">
+              <h1> {{ page.title }} </h1>
+              {% if page.subtitle %}
+                <h3> <em> {{ page.subtitle }} </em> </h3>
+              {% endif %}
+              {{ content }}
             </div>
           </div>
         </div>
