--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,6 +21,7 @@
                 <h3> <em> {{ page.subtitle }} </em> </h3>
               {% endif %}
               {{ content }}
+              {% include foot.html %}
             </div>
           </div>
         </div>
