--- a/styles/style.less
+++ b/styles/style.less
@@ -123,24 +123,32 @@ a:hover {
     margin-right: auto !important;
     font-size: 20px;
     line-height: 150%;
+    color: #444;
 
     h1 {
       font-size: 50px;
-      margin-top: 45px;
+      margin: 45px 0;
+      line-height: 110%;
+      color: #222;
     }
 
     h3 {
       font-size: 16px;
       color: @highlightGrey;
-      margin: 0;
+      margin-top: -35px;
     }
 
     h2 {
       font-size: 25px;
       line-height: 120%;
-      line-height: 25px;
+      color: #222;
+      margin: 30px 0 15px 0;
     }
   }
+}
+
+#custom {
+  width: 100px;
 }
 
 
