started first post

--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -1,9 +1,10 @@
 <footer>
-  <div id="custom"></div>
-  <a href="https://twitter.com/share" data-via="kmx411" data-related="kmx411" class="twitter-share-button" data-lang="en">Tweet</a>
+  <hr/>
+  <!--<a href="https://twitter.com/share" data-via="kmx411" data-related="kmx411" class="twitter-share-button" data-lang="en">Tweet</a>-->
+  <a href="{{page.facebook}}" id="comment"> Join the Conversation / Leave a Comment </a>
 </footer>
 
 
 
 
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+<!--<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="https://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>-->
