--- a/styles/style.less
+++ b/styles/style.less
@@ -6,6 +6,8 @@
 @highlightGrey: #666666;
 @plainGrey: #C0C0C0;
 @postTitle: #AD234B;
+@footerColour: #F9F9F7;
+@buttonColour: #76AC6A;
 @import url("http://fonts.googleapis.com/css?family=Open+Sans:400italic,400,800");
 
 html{
@@ -149,6 +151,22 @@ a:hover {
 
 #custom {
   width: 100px;
+}
+
+footer {
+  background: @footerColour;
+  height: 100px;
+  
+  #comment{
+    background: @buttonColour;
+    height: 32px;
+    text-align: center;
+    color: white;
+    font-size: 16px;
+    cursor: pointer;
+    padding: 3px;
+    display: block;
+  }
 }
 
 
